fix: button wrong height

--- a/packages/trustfall-interface/src/components/Navigation.scss
+++ b/packages/trustfall-interface/src/components/Navigation.scss
@@ -35,6 +35,7 @@
 
   .discordButton.discordButton {
     padding-right: 16px;
+    max-height: 44px;
     svg {
       margin: 0;
       path {
